Fix project arrow sizing issue on chrome
On chrome, the arrow size would be too large and sometimes extend outside the
regular width of the website page.

--- a/src/app/home/projects/projects-section.component.css
+++ b/src/app/home/projects/projects-section.component.css
@@ -30,10 +30,8 @@
 }
 
 app-project {
-  display: block;
-  width: 100%;
   height: 650px;
-  flex: 40;
+  flex: 1;
 }
 
 .arrow-container {
@@ -41,11 +39,11 @@ app-project {
   transition: 0.3s ease-in;
   background-color: #00000055;
   display: flex;
-  flex: 1;
 }
 
 .arrow-container img {
   padding: 20px;
+  width: 20px;
 }
 
 .arrow-container:hover {
